--- a/temp_sender2/temp_sender2.vcxproj
+++ b/temp_sender2/temp_sender2.vcxproj
@@ -11,10 +11,10 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{190F59FC-F3A2-469F-AD62-53C101E78185}</ProjectGuid>
+    <ProjectGuid>{20809531-1D76-4A9D-B62A-D909D124E0F3}</ProjectGuid>
     <RootNamespace>
     </RootNamespace>
-    <ProjectName>pool_sensor</ProjectName>
+    <ProjectName>temp_sender2</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -28,7 +28,8 @@
     <UseDebugLibraries>false</UseDebugLibraries>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>MultiByte</CharacterSet>
-    <PlatformToolset>v143</PlatformToolset>
+    <PlatformToolset>
+    </PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -71,8 +72,6 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <ForcedIncludeFiles>$(ProjectDir)__vm\.pool_sensor.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
-      <PreprocessorDefinitions>__AVR_atmega328p__;__AVR_ATmega328P__;__AVR_ATmega328p__;F_CPU=8000000L;ARDUINO=108019;ARDUINO_AVR_PRO;ARDUINO_ARCH_AVR;__cplusplus=201103L;_VMICRO_INTELLISENSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -85,8 +84,8 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\pool_sensor;$(ProjectDir)..\..\..\Users\erik\AppData\Local\arduino15\packages\arduino\hardware\avr\1.8.5\libraries\SPI\src;$(ProjectDir)..\..\..\Users\erik\OneDrive - Apption\Documents\Arduino\libraries\RF24;$(ProjectDir)..\..\..\Users\erik\OneDrive - Apption\Documents\Arduino\libraries\RF24\utility;$(ProjectDir)..\..\..\Users\erik\OneDrive - Apption\Documents\Arduino\libraries\LowPower_LowPowerLab;$(ProjectDir)..\..\..\Users\erik\OneDrive - Apption\Documents\Arduino\libraries\OneWire;$(ProjectDir)..\..\..\Users\erik\OneDrive - Apption\Documents\Arduino\libraries\DS18B20_RT;$(ProjectDir)..\..\..\Users\erik\OneDrive - Apption\Documents\Arduino\libraries\Vcc\src;$(ProjectDir)..\..\..\Users\erik\OneDrive - Apption\Documents\Arduino\libraries\EasyLed\src;$(ProjectDir)..\..\..\Users\erik\OneDrive - Apption\Documents\Arduino\libraries\nrfdata;$(ProjectDir)..\..\..\Users\erik\AppData\Local\arduino15\packages\arduino\hardware\avr\1.8.5\cores\arduino;$(ProjectDir)..\..\..\Users\erik\AppData\Local\arduino15\packages\arduino\hardware\avr\1.8.5\variants\eightanaloginputs;$(ProjectDir)..\..\..\Users\erik\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\7.3.0-atmel3.6.1-arduino7\\lib\gcc\avr\7.3.0\include;$(ProjectDir)..\..\..\Users\erik\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\7.3.0-atmel3.6.1-arduino7\avr\include;$(ProjectDir)..\..\..\Users\erik\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\7.3.0-atmel3.6.1-arduino7\\lib\gcc\avr\7.3.0\include;$(ProjectDir)..\..\..\Users\erik\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\7.3.0-atmel3.6.1-arduino7\avr\include-fixed;$(ProjectDir)..\..\..\Users\erik\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\7.3.0-atmel3.6.1-arduino7\avr\include\avr;$(ProjectDir)..\..\..\Users\erik\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\7.3.0-atmel3.6.1-arduino7\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\Users\erik\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\7.3.0-atmel3.6.1-arduino7\lib\gcc\avr\4.9.2\include;$(ProjectDir)..\..\..\Users\erik\AppData\Local\arduino15\packages\arduino\tools\avr-gcc\7.3.0-atmel3.6.1-arduino7\lib\gcc\avr\4.9.3\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
-      <ForcedIncludeFiles>$(ProjectDir)__vm\.pool_sensor.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
+      <AdditionalIncludeDirectories>%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <ForcedIncludeFiles>$(ProjectDir)__vm\.temp_sender2.vsarduino.h;%(ForcedIncludeFiles)</ForcedIncludeFiles>
       <IgnoreStandardIncludePath>true</IgnoreStandardIncludePath>
       <PreprocessorDefinitions>__AVR_atmega328p__;__AVR_ATmega328P__;__AVR_ATmega328p__;F_CPU=8000000L;ARDUINO=108019;ARDUINO_AVR_PRO;ARDUINO_ARCH_AVR;__cplusplus=201103L;_VMICRO_INTELLISENSE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
@@ -98,10 +97,10 @@
     <ProjectCapability Include="VisualMicro" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="pool_sensor.ino" />
+    <None Include="temp_sender2.ino" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="__vm\.pool_sensor.vsarduino.h" />
+    <ClInclude Include="__vm\.temp_sender2.vsarduino.h" />
   </ItemGroup>
   <PropertyGroup>
     <DebuggerFlavor>VisualMicroDebugger</DebuggerFlavor>
