--- a/study_am2301_temp/requirements.txt
+++ b/study_am2301_temp/requirements.txt
@@ -3,4 +3,6 @@ adafruit-circuitpython-bmp3xx
 adafruit-circuitpython-sgp30
 adafruit-circuitpython-dht
 paho-mqtt
-
+click
+adafruit-python-shell
+gpiod
