--- a/esphome/furnace.yaml
+++ b/esphome/furnace.yaml
@@ -13,7 +13,7 @@ esp32:
 
 wifi:
   ssid: "GrenoblePirates-2G"
-  password: "s4on3a93z"
+  password: !secret wifi_password
 
   # Enable fallback hotspot (captive portal) in case wifi connection fails
   ap:
