--- a/hot_tub/platformio.ini
+++ b/hot_tub/platformio.ini
@@ -19,3 +19,8 @@ lib_deps =
 	milesburton/DallasTemperature@^3.11.0
 	file://../lib
 upload_port = COM3
+monitor_speed = 115200
+
+[env:custom_monitor_speedrate]
+
+monitor_speed = 115200
