--- a/hot_tub/platformio.ini
+++ b/hot_tub/platformio.ini
@@ -18,5 +18,6 @@ lib_deps =
 	paulstoffregen/OneWire@^2.3.7
 	milesburton/DallasTemperature@^3.11.0
 	file://../lib
+	lnlp/EasyLed@^1.1.0
 upload_port = COM3
 monitor_speed = 115200
